# temp-project

./: .gitignore  Dockerfile  README.md  arquitetura.drawio  docker-compose.yml  env.example  main.py  pyproject.toml
src/: app.py
src/agents/deep_search/: deep_search_agent.py  deep_search_prompt.xml
src/controller/: chat_controller.py
src/router/: router.py
src/services/: chat_service.py
src/tools/: deep_search_tool.py
